# loan-default-insight-pro

./: .gitignore  README.md  pyproject.toml
src/: app.py  visualizations.py
src/components/: sidebar.py
src/core/: formatting.py  metrics.py  processing.py  risk.py  story.py
src/database/: loader.py
tests/: test_core.py
